# SoftRenderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
Apps/: CMakeLists.txt  framework.hpp  main.cpp  mesh.cpp  model.cpp  triangle.cpp
Apps/lib/: application.cpp  application.h  framework.cpp  framework.h  framework.hpp
Apps/src/: SDLApplication.cpp  SDLApplication.h  SDL_application.cpp  SDL_application.h  mesh.cpp  triangle.cpp
RenderBase/: CMakeLists.txt
RenderBase/include/renderbase/math/: color.h  common.h  matrix.h  matrix.hpp  quaternion.h  vec.hpp
RenderBase/include/renderbase/scene/: vertex.h
RenderBase/src/renderbase/math/: color.cpp  matrix.cpp  quaternion.cpp
RenderBase/tests/: CMakeLists.txt  math_common_tests.cpp  math_matrix_tests.cpp  math_quaternion_tests.cpp  math_vec_tests.cpp
Renderlib/: CMakeLists.txt
Renderlib/include/renderlib/: utils.h
Renderlib/include/renderlib/core/: matrix.hpp  vec.hpp
Renderlib/tests/: CMakeLists.txt  matrix_tests.cpp  utils_tests.cpp  vec_tests.cpp
SoftRenderer/: CMakeLists.txt  macos.cpp  windows.cpp
SoftRenderer/include/: SoftRenderer.h  renderer.h
SoftRenderer/include/SoftRenderer/: camera.h  color.h  common.h  matrix.h  mesh.h  obj_loader.h  quaternion.h  renderer.h  scene.h  shader_context.h  shader_program.h  shader_variable.h  transform.h  vec.h  vertex.h
SoftRenderer/include/SoftRenderer/loader/: obj_loader.h
SoftRenderer/include/SoftRenderer/math/: color.h  common.h  matrix.h  matrix.hpp  quaternion.h  transform.h  vec.hpp
SoftRenderer/include/SoftRenderer/scene/: camera.h  mesh.h  renderer.h  scene.h  vertex.h
SoftRenderer/src/: camera.cpp  common.cpp  main.cpp  obj_loader.cpp  quaternion.cpp  renderer.cpp  scene.cpp  shader_program.cpp  transform.cpp  windows.cpp
SoftRenderer/src/SoftRenderer/: renderer.cpp
SoftRenderer/src/SoftRenderer/loader/: obj_loader.cpp
SoftRenderer/src/SoftRenderer/math/: color.cpp  matrix.cpp  quaternion.cpp  transform.cpp
SoftRenderer/src/SoftRenderer/scene/: renderer.cpp  scene.cpp
SoftRenderer/tests/: CMakeLists.txt  color_tests.cpp  common_tests.cpp  math_common_tests.cpp  math_matrix_tests.cpp  math_quaternion_tests.cpp  math_vec_tests.cpp  matrix_tests.cpp  vec_tests.cpp
app/: CMakeLists.txt  main.cpp
include/: utils.h
include/core/: vec.h
renderer/: CMakeLists.txt
renderer/include/: utils.h
renderer/include/core/: matrix.h  vec.h
renderer/include/renderer/: utils.h
renderer/include/renderer/core/: vec.hpp
renderer/src/: lib.cpp
renderer/src/core/: matrix.cpp
src/: CMakeLists.txt  lib.cpp  main.cpp
src/core/: vec.cpp
tests/: CMakeLists.txt  matrix_tests.cpp  utils_tests.cpp  vec_tests.cpp
